* Ctrl-A, F9 messes up order
* Problems with doubly drawn list content
* Fixed BadMatch X errors.
* Mood and tempo extraction from songs?
* Remember whether AutoDJ was enabled across runs.
* Highlight current song leaves another marked song also selected.
* Fix annoyance with clicking artist link twice.
* Continuous AutoDJ from any source.
* Convert to arch tree. 
* Separate build tree.
* Show count after letter in overview.
* sort fields filled with random data?

MAJOR CHANGES:
* Playlist management button. [done]
* Continuous AutoDJ. (Shawn, Adam Ward) [done]
+ Support FLAC. [done]
+ Support M4A. [done] (Walt)
* Switched to Scott Wheeler's Taglib. [done]
+ New UI for current song, imitating Rhythmbox.
  I guess imitation is the sincerest form of flattery. [done]
+ Hierarchical sorting. (album, track number) [done]
+ Added keyboard shortcuts for most important actions. [done]
+ Added a "small UI" mode. [done]
* Rewrite build instructions. [done]
+ Added a fully-fledged path browser. [done]
* New icons by Felipe Rivera. [done]
+ Added mood, tempo, custom1-3 fields. (Guido Schlabitz) [done]

MINOR IMPROVEMENTS:
+ Show configurable string in title bar. [done]
* Re-enable Ctrl+A. (Michael Albert) [done]
+ Added an install_to= option to SConstruct. (Klaus S. Madsen) [done]
* Added a pref to say whether to read ID3v1 or v2. [done]
* Changed "Play Now" semantics back to enqueuing in the middle of the 
  current list. [done]
* Text match criterion "startswith:" [done]
* Massive redraw speedup by avoiding several hundred round trips through
  XMMS on each redraw. Oops. [done]
+ Passive Popup now has Back and Forward buttons. (Guido Schlabitz) [done]
+ Added letterwise grouping of overview. (Guido Schlabitz) [done]
* Added more information to passive popup by default. [done]

BUGS FIXED:
* Fixed "_lib" -> "_library" in SConstruct error output.
  (Justus Schwartz) [done]
* Fixed "evenutally" typos in several context menus. (Reuben Thomas) [done]